# Irodori-TTS

./: .gitignore  README.md  convert_checkpoint_to_safetensors.py  gradio_app.py  gradio_app_voicedesign.py  infer.py  prepare_manifest.py  pyproject.toml  requirements.txt  sway_sampling.py  train.py
irodori_tts/: __init__.py  codec.py  config.py  dataset.py  inference_runtime.py  lora.py  model.py  rf.py  tokenizer.py
