[project]
name = "irodori-tts"
version = "0.1.0"
description = "Irodori-TTS training and inference codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "dacvae",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers<5",
]


[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.34",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
torchaudio = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }]
dacvae = { git = "https://github.com/facebookresearch/dacvae" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "T201",
    "ANN",
]

[tool.ruff.lint.isort]
known-first-party = ["irodori_tts"]

